# F35-Flight-Simulator

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  install_dependencies_pc.py  install_dependencies_pi.py  installer.iss  requirements._pi.txt  requirements_pc.txt  sftp-config.json
config/: logging_config.json  throttle_config.json
sim-plugins/msfs/: README.md  ThrottleBridge.csproj
sim-plugins/xplane/: CMakeLists.txt  README.md
sim-plugins/xplane/src/: plugin.cpp
src/: F35.py  F35.spec  F35_Throttle_Button_Map.csv  log_all_inputs.cpp
src/gui/: README.md  logger.py  main_gui.py  sensor_reader.py
src/sim-plugins/msfs/src/: ThrottleBridge.cs
testing/: Encoder-Test.py  README.md  T1-Test.py  T10-Test.py  T11-Test.py  T12-Test.py  T2-Test.py  T3-Test.py  T4-Test.py  T5-Test-INC.py  T6-Test.py  T8-Test.py  T9-Test.py  fake_throttle_sender.py  send_inputs.py  send_throttle.py  test_logger_output.py  test_vjoy.py  udp_to_vjoy.py
~/.ssh/: config
